<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="itemPostViewModel"
            type="com.example.asus.example.mvvm.ViewModel.ItemPostViewModel"/>
    </data>
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/itemRVHeight"
    android:id="@+id/item_post"
    android:background="@color/white">


    <TextView
        android:id="@+id/fragmentNameOfUserWhoPostedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@{itemPostViewModel.creatorName}"
        app:layout_constraintEnd_toStartOf="@+id/fragmentPostTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentPictureOfUserWhoPostedIV" />

    <ImageView
        android:id="@+id/thumbsDown"
        android:onClick="@{(v) ->itemPostViewModel.onUnLike(v)}"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentThumbsUpIV"
        app:layout_constraintEnd_toStartOf="@+id/fragmentThumbsUpIV"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragmentThumbsUpIV"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_thumb_down_icon" />

    <ImageView
        android:onClick="@{(v) ->itemPostViewModel.onLike(v)}"
        android:id="@+id/fragmentThumbsUpIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragmentPostTV"
        app:layout_constraintTop_toBottomOf="@+id/fragmentNameOfUserWhoPostedTV"
        app:srcCompat="@drawable/ic_thumb_ub_icon" />

    <TextView
        android:id="@+id/datePostTV"
        android:layout_width="70dp"
        android:layout_height="27dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@{itemPostViewModel.dateAsString}"
        app:layout_constraintBottom_toBottomOf="@+id/numberOfLikesTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/numberOfLikesTV"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fragmentWherePostedTV"
        android:layout_width="90dp"
        android:layout_height="27dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:text="@{itemPostViewModel.ownerName}"
        app:layout_constraintBottom_toBottomOf="@+id/numberOfLikesTV"
        app:layout_constraintStart_toStartOf="@+id/fragmentPostTV"
        app:layout_constraintTop_toTopOf="@+id/numberOfLikesTV"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/numberOfLikesTV"
        android:layout_width="70dp"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@{itemPostViewModel.numberOfLikesAsString}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/datePostTV"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toEndOf="@+id/fragmentWherePostedTV"
        app:layout_constraintTop_toBottomOf="@+id/fragmentPostTV"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fragmentPostTV"
        android:layout_width="260dp"
        android:layout_height="86dp"
        android:layout_marginTop="16dp"
        android:text="@{itemPostViewModel.text}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fragmentPictureOfUserWhoPostedIV"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/fragmentPostTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
</layout>