<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_feed"
            android:title="@string/feed"
            android:icon="@drawable/ic_feed_icon"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile_icon"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_log_out_icon"
            android:title="@string/logout" />

    </group>

    <item android:title="@string/entdecken">
        <menu>
            <item
                android:id="@+id/nav_groups"
                android:title="@string/groups"
                android:icon="@drawable/ic_group_icon"/>
            <item
                android:id="@+id/nav_events"
                android:title="@string/events"
                android:icon="@drawable/ic_event_icon"/>
            <item
                android:id="@+id/nav_search"
                android:title="@string/search"
                android:icon="@drawable/ic_search_icon"/>
        </menu>
    </item>

</menu>
